# notzero

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  tests.rs
src/ui_tests/: dummy-fine.rs  pass_nonconst-err.rs  pass_nonconst-err.stderr  pass_nonint_arg-err.rs  pass_nonint_arg-err.stderr  pass_zero_const-err.rs  pass_zero_const-err.stderr  pass_zero_runtime-err.rs  pass_zero_runtime-err.stderr
