[package]
name = "notzero"
version = "1.0.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2021"
license = "Zlib"
description = "macro for constructing `std::num::NonZero*` from constants"
documentation = "https://docs.rs/notzero/"
readme = "./README.md"
keywords = []
categories = ["no-std"]
repository = "https://github.com/rodrimati1992/notzero/"
include = [
    "Cargo.toml", 
    "src/**/*.rs", 
    "./README.md",
    "LICENSE-ZLIB.md", 
]


[dependencies.typewit]
version = "1.8"
default-features = false


[dev-dependencies]
trybuild = "1.0"