[package]
name = "notzero"
version = "1.1.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
rust-version = "1.79.0"
edition = "2021"
license = "Zlib"
description = "macro for constructing `std::num::NonZero*` from constants"
documentation = "https://docs.rs/notzero/"
readme = "./README.md"
keywords = ["nonzero","non-zero"]
categories = ["no-std", "rust-patterns"]
repository = "https://github.com/rodrimati1992/notzero/"
include = [
    "Cargo.toml", 
    "src/**/*.rs", 
    "./README.md",
    "LICENSE-ZLIB.md", 
]


[features]
__ui_tests = []

[dependencies.typewit]
version = "1.8"
default-features = false


[dev-dependencies]
trybuild = "1.0"